2006-03-21  Mark Grondona <mgrondona@llnl.gov>
	* src/common/split.c, src/common/split.h, src/pdsh/opt.c : 
	  Move list_join() from pdsh/opt.c to common/split.c.

2006-03-21  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/main.c (_interactive_dsh) : 
	  Add support for command history in interactive mode when using 
	  readline.  History file is placed in ~/.pdsh/history. 
	  Original patch from Sebastien Cabaniols <Sebastian.Cabaniols@hp.com>.

2006-03-16  Jim Garlick <garlick@llnl.gov>

	* src/modules/xcpucmd.c : Add support support for signals.
	  Change mini shell script so -S hack will work.

2006-03-15  Mark Grondona <mgrondona@llnl.gov>
	* src/pdsh/mod.c : Remove error message when loading duplicate
	  module in pdsh. This is OK since we removed code which
	  only loaded .la's, we could be loading corresponding .so
	  after the .la (or vice versa).

	* pdsh.spec : Remove unneeded .la and .a files in packages.

	* : tag pdsh-2.9

2006-03-15  Jim Garlick <garlick@llnl.gov>

	* src/modules/xcpucmd.c : Use io session file instead of 
	stdout and stdin session files.  Enable pdcp support.

	* doc/pdsh.1.in, doc/pdcp.1.in : Describe xcpu module.

2006-03-14  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/mod.c : Remove code which only loaded pdsh modules via
	  *.la files. This probably doesn't save much time and didn't allow
	  us to only install .so's on some systems.

	* src/common/split.c : Include xmalloc.h for Strdup () prototype.

2006-03-14  Jim Garlick <garlick@llnl.gov>

	* src/modules/xcpucmd.c, config/ac_xcpu.m4 : New (experimental).

	* configure.ac, config/Makefile.am, src/modules/Makefile.am : 
	Add xcpu module support.

	* src/pdsh/rcmd.c : set precedence for xcpu module.

	* README.modules, NEWS : List xcpu module.

2006-02-24  Mark Grondona <mgrondona@llnl.gov>

	* config/ac_debug.m4, configure : 
	  Do not strip executables on Mac OSX, this seems to remove all access 
	  to global dynamic symbols for loaded modules.
