@@ -1,6 +1,12 @@
-2006-03-21  Mark Grondona <mgrondona@llnl.gov>
+2006-03-22  Mark Grondona <mgrondona@llnl.gov>
 	* src/common/split.c, src/common/split.h, src/pdsh/opt.c : 
 	  Move list_join() from pdsh/opt.c to common/split.c.
+
+	* src/pdsh/rcmd.h, src/pdsh/rcmd.c, src/pdsh/dsh.c, 
+	  src/pdsh/opt.c, src/modules/sshcmd.c, src/modules/genders.c :
+	  Missing updates from rcmd-rewrite branch. Allow user@
+	  to be specified in -w host spec. Add rcmd_opt_set() to
+	  allow rcmd modules to set rcmd-specific options (e.g. resolve_hosts).
 
 2006-03-21  Mark Grondona <mgrondona@llnl.gov>
 
